--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <title>webstudio</title>
   </head>
   <body>
-    <header class="header-nav">
+    <div class="container">
+    <header class="header-nav .sections">
       <nav class="nav-main">
         <a href="./index.html" class="logo logo-web"
           >Web<span class="logo-studio">Studio</span></a
@@ -57,16 +58,20 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
     <main>
       <!-- #region main section -->
-      <section class="main-section">
+       <div class="container">
+      <section class="main-section .sections">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button-order">Order Service</button>
+      </div>
       </section>
       <!-- #endregion main section -->
       <!-- #region describe -->
       <section>
+        <div class="container sections">
         <h2></h2>
         <ul>
           <li class="describe-section">
@@ -98,10 +103,12 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <!-- #endregion desribe -->
       <!-- #region team -->
-      <section class="team-main">
+      <section class="team-main sections">
+      <div class="container">
         <h2 class="class-title">Our Team</h2>
         <ul>
           <li class="team-section">
@@ -145,10 +152,12 @@
             <p class="team-position">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
       <!-- #endregion team-->
       <!-- #region our portfolio -->
       <section>
+      <div class="container sections">
         <h2 class="class-title">Our Portfolio</h2>
         <ul>
           <li class="element">
@@ -212,10 +221,12 @@
             <p class="element-describe">Marketing</p>
           </li>
         </ul>
+        </div>
       </section>
       <!-- #endregion our portfolio -->
     </main>
-    <footer class="footer-page">
+    <footer class="footer-page sections">
+    <div class="container">
       <a href="./index.html" class="logo-web"
         >Web<span class="logo-studio-footer">Studio</span></a
       >
@@ -223,6 +234,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
