--- a/index.html
+++ b/index.html
@@ -26,214 +26,215 @@
     <title>webstudio</title>
   </head>
   <body>
-    <div class="container">
-    <header class="header-nav .sections">
-      <nav class="nav-main">
-        <a href="./index.html" class="logo logo-web"
-          >Web<span class="logo-studio">Studio</span></a
-        >
-        <ul>
-          <li class="nav-items">
-            <a href="./index.html" class="nav-items-link">Studio</a>
-          </li>
-          <li class="nav-items">
-            <a href="" class="nav-items-link">Portfolio</a>
-          </li>
-          <li class="nav-items">
-            <a href="" class="nav-items-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address-nav">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-items"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-items"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </div>
+    <header class="page-header">
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo logo-web"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <ul class="nav-list-header">
+            <li class="nav-items">
+              <a href="./index.html" class="nav-items-link">Studio</a>
+            </li>
+            <li class="nav-items">
+              <a href="" class="nav-items-link">Portfolio</a>
+            </li>
+            <li class="nav-items">
+              <a href="" class="nav-items-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address-nav">
+          <ul class="address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-items"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-items"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- #region main section -->
-       <div class="container">
-      <section class="main-section .sections">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button-order">Order Service</button>
-      </div>
+
+      <section class="main-section">
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button-order">Order Service</button>
+        </div>
       </section>
       <!-- #endregion main section -->
       <!-- #region describe -->
       <section>
-        <div class="container sections">
-        <h2></h2>
-        <ul>
-          <li class="describe-section">
-            <h3 class="describe-title">Strategy</h3>
-            <p class="describe-p">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="describe-section">
-            <h3 class="describe-title">Punctuality</h3>
-            <p class="describe-p">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="describe-section">
-            <h3 class="describe-title">Diligence</h3>
-            <p class="describe-p">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="describe-section">
-            <h3 class="describe-title">Technologies</h3>
-            <p class="describe-p">
-              " Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2></h2>
+          <ul>
+            <li class="describe-section">
+              <h3 class="describe-title">Strategy</h3>
+              <p class="describe-p">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="describe-section">
+              <h3 class="describe-title">Punctuality</h3>
+              <p class="describe-p">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="describe-section">
+              <h3 class="describe-title">Diligence</h3>
+              <p class="describe-p">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="describe-section">
+              <h3 class="describe-title">Technologies</h3>
+              <p class="describe-p">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- #endregion desribe -->
       <!-- #region team -->
       <section class="team-main sections">
-      <div class="container">
-        <h2 class="class-title">Our Team</h2>
-        <ul>
-          <li class="team-section">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="image-team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-section">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="image-team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-section">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="image-team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-section">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="image-team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="class-title">Our Team</h2>
+          <ul>
+            <li class="team-section">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="image-team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-section">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="image-team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-section">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="image-team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-section">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="image-team-name">Daniel Wilson</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- #endregion team-->
       <!-- #region our portfolio -->
       <section>
-      <div class="container sections">
-        <h2 class="class-title">Our Portfolio</h2>
-        <ul>
-          <li class="element">
-            <img
-              src="./images/banking-app.jpg"
-              alt="banking-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="element-name">Banking App</h3>
-            <p class="element-describe">App</p>
-          </li>
-          <li class="element">
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="cashless-payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="element-name">Cashless Payment</h3>
-            <p class="element-describe">Marketing</p>
-          </li>
-          <li class="element">
-            <img
-              src="./images/meditation-app.jpg"
-              alt="meditation-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="element-name">Meditation App</h3>
-            <p class="element-describe">App</p>
-          </li>
-          <li class="element">
-            <img
-              src="./images/taxi-service.jpg"
-              alt="taxi-service"
-              width="360"
-              height="300"
-            />
-            <h3 class="element-name">Taxi Service</h3>
-            <p class="element-describe">Marketing</p>
-          </li>
-          <li class="element">
-            <img
-              src="./images/screen-ilustration.jpg"
-              alt="screen-illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="element-name">Screen Illustrations</h3>
-            <p class="element-describe">Design</p>
-          </li>
-          <li class="element">
-            <img
-              src="./images/online-courses.jpg"
-              alt="online-courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="element-name">Online Courses</h3>
-            <p class="element-describe">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="class-title">Our Portfolio</h2>
+          <ul>
+            <li class="element">
+              <img
+                src="./images/banking-app.jpg"
+                alt="banking-app"
+                width="360"
+                height="300"
+              />
+              <h3 class="element-name">Banking App</h3>
+              <p class="element-describe">App</p>
+            </li>
+            <li class="element">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="cashless-payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="element-name">Cashless Payment</h3>
+              <p class="element-describe">Marketing</p>
+            </li>
+            <li class="element">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="meditation-app"
+                width="360"
+                height="300"
+              />
+              <h3 class="element-name">Meditation App</h3>
+              <p class="element-describe">App</p>
+            </li>
+            <li class="element">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="taxi-service"
+                width="360"
+                height="300"
+              />
+              <h3 class="element-name">Taxi Service</h3>
+              <p class="element-describe">Marketing</p>
+            </li>
+            <li class="element">
+              <img
+                src="./images/screen-ilustration.jpg"
+                alt="screen-illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="element-name">Screen Illustrations</h3>
+              <p class="element-describe">Design</p>
+            </li>
+            <li class="element">
+              <img
+                src="./images/online-courses.jpg"
+                alt="online-courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="element-name">Online Courses</h3>
+              <p class="element-describe">Marketing</p>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- #endregion our portfolio -->
     </main>
     <footer class="footer-page sections">
-    <div class="container">
-      <a href="./index.html" class="logo-web"
-        >Web<span class="logo-studio-footer">Studio</span></a
-      >
-      <p class="footer-p">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo-web"
+          >Web<span class="logo-studio-footer">Studio</span></a
+        >
+        <p class="footer-p">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
