--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
       </section>
       <!-- #endregion main section -->
       <!-- #region describe -->
-      <section>
+      <section class="descr">
         <div class="container">
           <h2></h2>
-          <ul>
+          <ul class="describe-list">
             <li class="describe-section">
               <h3 class="describe-title">Strategy</h3>
               <p class="describe-p">
