--- a/index.html
+++ b/index.html
@@ -110,14 +110,15 @@
       <!-- #region team -->
       <section class="team-main sections">
         <div class="container">
-          <h2 class="class-title">Our Team</h2>
-          <ul>
+          <h2 class="class-title-team">Our Team</h2>
+          <ul class="team-ul">
             <li class="team-section">
               <img
                 src="./images/mark-guerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="image-team-name">Mark Guerrero</h3>
               <p class="team-position">Product Designer</p>
@@ -128,6 +129,7 @@
                 alt="Tom Ford"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="image-team-name">Tom Ford</h3>
               <p class="team-position">Frontend Developer</p>
@@ -138,6 +140,7 @@
                 alt="Camila Garcia"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="image-team-name">Camila Garcia</h3>
               <p class="team-position">Marketing</p>
@@ -148,6 +151,7 @@
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="image-team-name">Daniel Wilson</h3>
               <p class="team-position">UI Designer</p>
