--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- #region describe -->
       <section class="descr">
         <div class="container">
-          <h2></h2>
+          <h2 class="title-descr">title</h2>
           <ul class="describe-list">
             <li class="describe-section">
               <h3 class="describe-title">Strategy</h3>
@@ -120,8 +120,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="image-team-name">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="team-name-position">
+                <h3 class="image-team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-section">
               <img
@@ -131,8 +133,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="image-team-name">Tom Ford</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-name-position">
+                <h3 class="image-team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-section">
               <img
@@ -142,8 +146,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="image-team-name">Camila Garcia</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-name-position">
+                <h3 class="image-team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-section">
               <img
@@ -153,8 +159,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="image-team-name">Daniel Wilson</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="team-name-position">
+                <h3 class="image-team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
