--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </section>
       <!-- #endregion desribe -->
       <!-- #region team -->
-      <section class="team-main sections">
+      <section class="team-main section">
         <div class="container">
           <h2 class="class-title-team">Our Team</h2>
           <ul class="team-ul">
@@ -169,10 +169,10 @@
       </section>
       <!-- #endregion team-->
       <!-- #region our portfolio -->
-      <section>
+      <section class="products">
         <div class="container">
           <h2 class="class-title">Our Portfolio</h2>
-          <ul>
+          <ul class="products-list">
             <li class="element">
               <img
                 src="./images/banking-app.jpg"
@@ -180,8 +180,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="element-name">Banking App</h3>
-              <p class="element-describe">App</p>
+              <div class="products-name">
+                <h3 class="element-name">Banking App</h3>
+                <p class="element-describe">App</p>
+              </div>
             </li>
             <li class="element">
               <img
@@ -190,8 +192,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="element-name">Cashless Payment</h3>
-              <p class="element-describe">Marketing</p>
+              <div class="products-name">
+                <h3 class="element-name">Cashless Payment</h3>
+                <p class="element-describe">Marketing</p>
+              </div>
             </li>
             <li class="element">
               <img
@@ -200,8 +204,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="element-name">Meditation App</h3>
-              <p class="element-describe">App</p>
+              <div class="products-name">
+                <h3 class="element-name">Meditation App</h3>
+                <p class="element-describe">App</p>
+              </div>
             </li>
             <li class="element">
               <img
@@ -210,8 +216,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="element-name">Taxi Service</h3>
-              <p class="element-describe">Marketing</p>
+              <div class="products-name">
+                <h3 class="element-name">Taxi Service</h3>
+                <p class="element-describe">Marketing</p>
+              </div>
             </li>
             <li class="element">
               <img
@@ -220,8 +228,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="element-name">Screen Illustrations</h3>
-              <p class="element-describe">Design</p>
+              <div class="products-name">
+                <h3 class="element-name">Screen Illustrations</h3>
+                <p class="element-describe">Design</p>
+              </div>
             </li>
             <li class="element">
               <img
@@ -230,8 +240,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="element-name">Online Courses</h3>
-              <p class="element-describe">Marketing</p>
+              <div class="products-name">
+                <h3 class="element-name">Online Courses</h3>
+                <p class="element-describe">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
