--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </section>
       <!-- #endregion our portfolio -->
     </main>
-    <footer class="footer-page sections">
+    <footer class="footer-page">
       <div class="container">
         <a href="./index.html" class="logo-web"
           >Web<span class="logo-studio-footer">Studio</span></a
