--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </section>
       <!-- #endregion desribe -->
       <!-- #region team -->
-      <section class="team-main section">
+      <section class="main-team-section">
         <div class="container">
           <h2 class="class-title-team">Our Team</h2>
           <ul class="team-ul">
