--- a/index.html
+++ b/index.html
@@ -113,32 +113,52 @@
           <h2 class="class-title-team">Our Team</h2>
           <ul class="team-ul">
             <li class="team-section">
-              <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero";
-              width="264"; height="260"; class="team-img"; display: block; />
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+                class="team-img"
+              />
               <div class="team-name-position">
                 <h3 class="image-team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
               </div>
             </li>
             <li class="team-section">
-              <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264"
-              height="260" class="team-img"; display: block; />
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+                class="team-img"
+              />
               <div class="team-name-position">
                 <h3 class="image-team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
             </li>
             <li class="team-section">
-              <img src="./images/camila-garcia.jpg" alt="Camila Garcia"
-              width="264" height="260" class="team-img"; display: block; />
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+                class="team-img"
+              />
               <div class="team-name-position">
                 <h3 class="image-team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
               </div>
             </li>
             <li class="team-section">
-              <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson"
-              width="264" height="260" class="team-img"; display: block; />
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+                class="team-img"
+              />
               <div class="team-name-position">
                 <h3 class="image-team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
@@ -154,49 +174,72 @@
           <h2 class="class-title">Our Portfolio</h2>
           <ul class="products-list">
             <li class="element">
-              <img src="./images/banking-app.jpg" alt="banking-app" width="360"
-              height="300" display: block; />
+              <img
+                src="./images/banking-app.jpg"
+                alt="banking-app"
+                width="360"
+                height="300"
+              />
               <div class="products-name">
                 <h3 class="element-name">Banking App</h3>
                 <p class="element-describe">App</p>
               </div>
             </li>
             <li class="element">
-              <img src="./images/cashless-payment.jpg" alt="cashless-payment"
-              width="360" height="300"; display: block; />
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="cashless-payment"
+                width="360"
+                height="300"
+              />
               <div class="products-name">
                 <h3 class="element-name">Cashless Payment</h3>
                 <p class="element-describe">Marketing</p>
               </div>
             </li>
             <li class="element">
-              <img src="./images/meditation-app.jpg" alt="meditation-app"
-              width="360" height="300"; display: block; />
+              <img
+                src="./images/meditation-app.jpg"
+                alt="meditation-app"
+                width="360"
+                height="300"
+              />
               <div class="products-name">
                 <h3 class="element-name">Meditation App</h3>
                 <p class="element-describe">App</p>
               </div>
             </li>
             <li class="element">
-              <img src="./images/taxi-service.jpg" alt="taxi-service"
-              width="360" height="300"; display: block; />
+              <img
+                src="./images/taxi-service.jpg"
+                alt="taxi-service"
+                width="360"
+                height="300"
+              />
               <div class="products-name">
                 <h3 class="element-name">Taxi Service</h3>
                 <p class="element-describe">Marketing</p>
               </div>
             </li>
             <li class="element">
-              <img src="./images/screen-ilustration.jpg"
-              alt="screen-illustrations" width="360" height="300"; display:
-              block; />
+              <img
+                src="./images/screen-ilustration.jpg"
+                alt="screen-illustrations"
+                width="360"
+                height="300"
+              />
               <div class="products-name">
                 <h3 class="element-name">Screen Illustrations</h3>
                 <p class="element-describe">Design</p>
               </div>
             </li>
             <li class="element">
-              <img src="./images/online-courses.jpg" alt="online-courses"
-              width="360" height="300"; display: block; />
+              <img
+                src="./images/online-courses.jpg"
+                alt="online-courses"
+                width="360"
+                height="300"
+              />
               <div class="products-name">
                 <h3 class="element-name">Online Courses</h3>
                 <p class="element-describe">Marketing</p>
