--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                 alt="banking-app"
                 width="360"
                 height="300"
+                class="products-img"
               />
               <div class="products-name">
                 <h3 class="element-name">Banking App</h3>
@@ -191,6 +192,7 @@
                 alt="cashless-payment"
                 width="360"
                 height="300"
+                class="products-img"
               />
               <div class="products-name">
                 <h3 class="element-name">Cashless Payment</h3>
@@ -203,6 +205,7 @@
                 alt="meditation-app"
                 width="360"
                 height="300"
+                class="products-img"
               />
               <div class="products-name">
                 <h3 class="element-name">Meditation App</h3>
@@ -215,6 +218,7 @@
                 alt="taxi-service"
                 width="360"
                 height="300"
+                class="products-img"
               />
               <div class="products-name">
                 <h3 class="element-name">Taxi Service</h3>
@@ -227,6 +231,7 @@
                 alt="screen-illustrations"
                 width="360"
                 height="300"
+                class="products-img"
               />
               <div class="products-name">
                 <h3 class="element-name">Screen Illustrations</h3>
@@ -239,6 +244,7 @@
                 alt="online-courses"
                 width="360"
                 height="300"
+                class="products-img"
               />
               <div class="products-name">
                 <h3 class="element-name">Online Courses</h3>
